syntax = "proto3";
package protocol;

option optimize_for = SPEED;
option go_package = "kon.nect.sh/specter/spec/protocol";

import "spec/proto/node.proto";

message IdentityRequest {}

message IdentityResponse {
    Node identity = 1;
}

message PingRequest {}

message PingResponse {}

message NotifyRequest {
    Node predecessor = 1;
}

message NotifyResponse {}

message FindSuccessorRequest {
    uint64 key = 1;
}

message FindSuccessorResponse {
    Node successor = 1;
}

message GetPredecessorRequest {}

message GetPredecessorResponse {
    Node predecessor = 1;
}

message GetSuccessorsRequest {}

message GetSuccessorsResponse {
    repeated Node successors = 1;
}

enum MembershipChangeOperation {
    UNKNOWN_CHANGE = 0;
    JOIN_REQUEST = 1;
    LOCK_PREDECESSOR = 2;
    JOIN_FINISH = 3;
}

message MembershipChangeRequest {
    MembershipChangeOperation op = 1;
    // used by RequestToJoin
    Node joiner = 2;
    // used by LockPredecessor
    Node successor = 3;
}

message MembershipChangeResponse {
    Node predecessor = 1;
    repeated Node successors = 2;
}
