syntax = "proto3";
package protocol;

option optimize_for = SPEED;
option go_package = "kon.nect.sh/specter/spec/protocol";

import "google/protobuf/duration.proto";

enum KVOperation {
    UNKNOWN_OP = 0;

    SIMPLE_PUT = 1;
    SIMPLE_GET = 2;
    SIMPLE_DELETE = 3;

    PREFIX_APPEND = 5;
    PREFIX_LIST = 6;
    PREFIX_REMOVE = 7;
    
    LEASE_ACQUIRE = 10;
    LEASE_RENEWAL = 11;
    LEASE_RELEASE = 12;

    IMPORT = 20;
}

message KVTransfer {
    bytes simple_value = 1;
    repeated bytes prefix_children = 2;
    uint64 lease_token = 3;
}

message KVLease {
    google.protobuf.Duration ttl = 1;
    uint64 token = 2;
}

message KVRequest {
    KVOperation op = 1;

    bytes key = 2;
    bytes value = 3;

    KVLease lease = 5;

    repeated bytes keys = 10;

    repeated KVTransfer values = 20;
}

message KVResponse {
    KVOperation op = 1;

    bytes value = 2;

    KVLease lease = 5;

    repeated bytes keys = 10;
    repeated bytes children = 11;

    repeated KVTransfer values = 20;
}